----------------------------------------------------------------------
 OmegaT 5.4.0
----------------------------------------------------------------------
  5 Enhancements
  5 Bug fixes
  0 Localisation updates
----------------------------------------------------------------------
5.4.0 vs 5.3.0

  Implemented requests:

  - Sync file deletions from repository to project
  https://sourceforge.net/p/omegat/feature-requests/1499/

  - Show branding in About dialog
  https://sourceforge.net/p/omegat/feature-requests/1511/

  - XLIFF: update target tag's state attribute according to
    translation status
  https://sourceforge.net/p/omegat/feature-requests/1506/

  - Externalize default color definitions
  https://sourceforge.net/p/omegat/feature-requests/1514/

  - Remove discontinued Yandex.Translate MT connector
  https://sourceforge.net/p/omegat/feature-requests/1522/

  Bug fixes:

  - Cannot create new team project in bare repository
  https://sourceforge.net/p/omegat/bugs/1005/

  - Leading whitespace not trimmed in HTML filter
  https://sourceforge.net/p/omegat/bugs/1006/

  - HTML filter whitespace handling errors
  https://sourceforge.net/p/omegat/bugs/1007/

  - Wrong background color in dark mode on Linux Mint
  https://sourceforge.net/p/omegat/bugs/1013/

  - Project Files table does not respect LAF colors
  https://sourceforge.net/p/omegat/bugs/1016/

  - Team project that uses a mapping to a remote sub directory silently fails to commit local changes
  https://sourceforge.net/p/omegat/bugs/1019/

----------------------------------------------------------------------
 OmegaT 5.3.0 (2020-08-03)
----------------------------------------------------------------------
  6 Enhancements
  9 Bug fixes
  10 Localisation updates
----------------------------------------------------------------------
5.3.0 vs 5.2.0

  Implemented requests:

  - Display concordance hits from auto/enforce TMX files first
  https://sourceforge.net/p/omegat/feature-requests/1283/
